--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <canvas id="canvas1"></canvas>
     <div id="loader">
         <div id="wrapperload">
             <div class="elem"><img src="images/name logo.svg" alt=""></div>
@@ -68,8 +69,7 @@
 
 
     <script src="index.js"></script>
-    <script src="particles.js"></script>
-    <script src="app.js"></script>
+    <script src="particle.js"></script>
 </body>
 
 </html>
