--- a/index.html
+++ b/index.html
@@ -38,24 +38,24 @@
             </div>
             <div class="links-side">
                 <a href="index.html">Home</a>
-                <a href="#">Contact</a>
-                <i class="ri-search-line"></i>
-                <i class="ri-menu-2-line"></i>
+                <a href="#">Skills</a>
+                <a href="#">About</a>
             </div>
 
         </nav>
         <div class="sections">
             <div class="left">
                 <h4>Hello, I am <img src="images/name logo.svg" alt="">,</h4>
-                <h5>A Web developer and designer from <span>India.</span></h5>
+                <h5>I am <span id="element"><h5></h5></span> from <span>India.</span></h5>
+                
                 <div class="btn">
-                    <img src="images/play-circle-fill.png" alt="">
-                    <h5>See my work profile</h5>
+                    <a href="#"><img src="images/download-2-fill.svg" alt=""></a>
+                    <a href="#"><h5>Download CV</h5></a>
                 </div>
                 <div class="contact">
                     <h3>Contact me</h3>
-                    <h6>E-mail -<span>mohdsaad88842@gmail.com</span></h6>
-                    <h6>Phone -<span>+91-9087654321</span></h6>
+                    <h6>E-mail -<span><a href="https://mail.google.com/mail/?view=cm&fs=1&to=mohdsaad88842@gmail.com">mohdsaad88842@gmail.com</a></span></h6>
+                    <h6>Phone -<span><a href="#">+91-9087654321</a></span></h6>
                 </div>
             </div>
             <div class="right">
@@ -67,9 +67,9 @@
 
 
 
-
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="index.js"></script>
-    <script src="particle.js"></script>
+    
 </body>
 
 </html>
