--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saad Salmany</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/Icon (Dark).svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/segoe-script" rel="stylesheet">
 
 </head>
 
 <body>
-    <canvas id="canvas1"></canvas>
-    <div id="loader">
+    <!-- <div id="loader">
         <div id="wrapperload">
             <div class="elem"><img src="images/name logo.svg" alt=""></div>
             <div class="elem">
@@ -28,9 +26,8 @@
             </div>
             <div class="elem"><img src="images/name logo.svg" alt=""></div>
         </div>
-    </div>
-
-    <div id="bg">
+    </div> -->
+    <div id="page1">
 
         <nav>
             <div class="logo-side">
@@ -38,38 +35,57 @@
             </div>
             <div class="links-side">
                 <a href="index.html">Home</a>
-                <a href="#">Skills</a>
+                <a href="#">Services</a>
+                <a href="#">Contact</a>
                 <a href="#">About</a>
             </div>
 
         </nav>
         <div class="sections">
             <div class="left">
-                <h4>Hello, I am <img src="images/name logo.svg" alt="">,</h4>
-                <h5>I am <span id="element"><h5></h5></span> from <span>India.</span></h5>
-                
+                <h4>Hello, I am <img src="images/name logo.svg" alt=""></h4>
+                <h5>And a Web Developer from <span>India.</span></h5>
+                <div class="socialIcons">
+                    <a href="https://www.instagram.com/saad.salmany/" target="_blank">
+                        <i class="ri-instagram-fill"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/saadsalmany/" target="_blank">
+                        <i class="ri-linkedin-box-fill"></i>
+                    </a>
+                    <a href="https://github.com/saadsalmany" target="_blank">
+                        <i class="ri-github-fill"></i>
+                    </a>
+                </div>
+
                 <div class="btn">
-                    <a href="#"><img src="images/download-2-fill.svg" alt=""></a>
-                    <a href="#"><h5>Download CV</h5></a>
+                    <div class="servicesBtn">
+                        <button>SERVICES</button>
+                    </div>
+                    <div class="contactBtn">
+                        <button>CONTACT ME</button>
+                    </div>
+
                 </div>
-                <div class="contact">
-                    <h3>Contact me</h3>
-                    <h6>E-mail -<span><a href="https://mail.google.com/mail/?view=cm&fs=1&to=mohdsaad88842@gmail.com">mohdsaad88842@gmail.com</a></span></h6>
-                    <h6>Phone -<span><a href="#">+91-9087654321</a></span></h6>
+                <div class="scrollText">
+                    <h3>Scroll Down </h3>
+                    <img src="images/arrow-down-double-line.png" alt="">
                 </div>
+
             </div>
             <div class="right">
                 <img src="images/portfolio potrait.png" alt="">
             </div>
         </div>
     </div>
+    <div class="page2">
+
+    </div>
 
 
 
 
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="index.js"></script>
-    
+
 </body>
 
 </html>
