--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <!-- <div id="loader">
+    <div id="loader">
         <div id="wrapperload">
             <div class="elem"><img src="images/name logo.svg" alt=""></div>
             <div class="elem">
@@ -26,7 +26,7 @@
             </div>
             <div class="elem"><img src="images/name logo.svg" alt=""></div>
         </div>
-    </div> -->
+    </div>
     <div id="page1">
 
         <nav>
