--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div id="loader">
+    <!-- <div id="loader">
         <div id="wrapperload">
             <div class="elem"><img src="images/name logo.svg" alt=""></div>
             <div class="elem">
@@ -26,7 +26,7 @@
             </div>
             <div class="elem"><img src="images/name logo.svg" alt=""></div>
         </div>
-    </div>
+    </div> -->
     <div id="page1">
 
         <nav>
@@ -44,7 +44,7 @@
         <div class="sections">
             <div class="left">
                 <h4>Hello, I am <img src="images/name logo.svg" alt=""></h4>
-                <h5>And a Web Developer from <span>India.</span></h5>
+                <h5>And I am a web developer from <span>India.</span></h5>
                 <div class="socialIcons">
                     <a href="https://www.instagram.com/saad.salmany/" target="_blank">
                         <i class="ri-instagram-fill"></i>
@@ -73,11 +73,15 @@
 
             </div>
             <div class="right">
-                <img src="images/portfolio potrait.png" alt="">
+                <img src="images/Untitled-1.png" alt="">
             </div>
         </div>
     </div>
+    <hr>
     <div class="page2">
+        <div class="myService">
+            <h1>My Services</h1>
+        </div>
 
     </div>
 
