--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 </head>
 
 <body>
-    <!-- <div id="loader">
+    <div id="loader">
         <div id="wrapperload">
             <div class="elem"><img src="images/name logo.svg" alt=""></div>
             <div class="elem">
-                <h3>UI/UX designer</h3>
+                <h3>Software developer</h3>
             </div>
             <div class="elem">
                 <h3>Loves to help brands.</h3>
             </div>
             <div class="elem"><img src="images/name logo.svg" alt=""></div>
         </div>
-    </div> -->
+    </div>
     <div id="page1">
 
         <nav>
@@ -44,7 +44,7 @@
         <div class="sections">
             <div class="left">
                 <h4>Hello, I am <img src="images/name logo.svg" alt=""></h4>
-                <h5>And I am a web developer from <span>India.</span></h5>
+                <h5>And I am <span class="autoType">Web developer</span> from <span>India.</span></h5>
                 <div class="socialIcons">
                     <a href="https://www.instagram.com/saad.salmany/" target="_blank">
                         <i class="ri-instagram-fill"></i>
@@ -78,15 +78,13 @@
         </div>
     </div>
     <div class="page2">
-        <div class="myService">
-            <h1>My Services</h1>
-        </div>
+       
 
     </div>
 
 
 
-
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="index.js"></script>
 
 </body>
