--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
 <body>
     <!-- <div id="loader">
         <div id="wrapperload">
-            <div class="elem"><img src="images/name logo.svg" alt=""></div>
+            <div class="elem"><img src="images/typelogo.svg" alt=""></div>
             <div class="elem">
                 <h3>Software developer</h3>
             </div>
             <div class="elem">
                 <h3>Loves to help brands.</h3>
             </div>
-            <div class="elem"><img src="images/name logo.svg" alt=""></div>
+            <div class="elem"><img src="images/typelogo.svg" alt=""></div>
         </div>
     </div> -->
     <div id="page1">
 
         <nav>
             <div class="logo-side">
-                <a href="index.html"> <img id="title" src="images/logo.png" alt="This is an logo"></a>
+                <a href="index.html"> <img id="title" src="images/logo-icon.svg" alt="This is an logo"></a>
             </div>
             <div class="links-side">
                 <a href="index.html">Home</a>
@@ -43,7 +43,7 @@
         </nav>
         <div class="sections">
             <div class="left">
-                <h4>Hello, I am <img src="images/name logo.svg" alt=""></h4>
+                <h4>Hello, I am <img src="images/typelogo.svg" alt=""></h4>
                 <h5>And I am <span class="autoType">Web developer</span> from <span>India.</span></h5>
                 <div class="socialIcons">
                     <a href="https://www.instagram.com/saad.salmany/" target="_blank">
@@ -58,22 +58,27 @@
                 </div>
 
                 <div class="btn">
-                    <div class="servicesBtn">
-                        <button>SERVICES</button>
-                    </div>
+                    <div class="text">Have a project?</div>
+                   
                     <div class="contactBtn">
-                        <button>CONTACT ME</button>
+                        <button>Let's talk</button>
                     </div>
 
                 </div>
                 <div class="scrollText">
                     <h3>Scroll Down </h3>
-                    <img src="images/arrow-down-double-line.png" alt="">
+                    <img src="images/arrow-down.svg" alt="">
+
                 </div>
 
             </div>
             <div class="right">
-                <img src="images/Untitled-1.png" alt="">
+                <img src="images/Layer 2.png" alt="">
+                <div class="shadow">
+                    <img src="images/shadow 1.png" alt="">
+
+                </div>
+
             </div>
         </div>
     </div>
