--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
             </div>
             <div class="links-side">
                 <a href="index.html">Home</a>
+                <a href="#">Projects</a>
                 <a href="#">Services</a>
-                <a href="#">Contact</a>
                 <a href="#">About</a>
+                <button class="contactbtn">Contact</button>
             </div>
 
         </nav>
@@ -112,8 +113,8 @@
                 </div>
                 <div class="pBtn">
                     <div class="div1">UI/UX</div>
-                    <div class="div2"><a href="" target="_blank"><img
-                                src="images/dribbble-fill.svg" alt="">Dribble</a></div>
+                    <div class="div2"><a href="" target="_blank"><img src="images/dribbble-fill.svg" alt="">Dribble</a>
+                    </div>
                 </div>
 
             </div>
@@ -126,8 +127,8 @@
                 </div>
                 <div class="pBtn">
                     <div class="div1">Android App</div>
-                    <div class="div2"><a href="" target="_blank"><img
-                                src="images/playstore-icon.svg" alt="">Play Store</a></div>
+                    <div class="div2"><a href="" target="_blank"><img src="images/playstore-icon.svg" alt="">Play
+                            Store</a></div>
                 </div>
 
             </div>
@@ -136,13 +137,20 @@
 
 
     </div>
-    <hr>
     <div class="page3">
         <div class="services-title">
             <img src="images/icon-dark.svg" alt="">
             <h1>Services</h1>
-
-
+        </div>
+        <div class="slines">
+        <div class="serviceLine1"><img src="images/FD-line.svg" alt=""><h3 class="wdheading">Web Development</h3></div>
+        <div class="serviceLine2"><img src="images/UI-line.svg" alt=""><h3 class="uiuxheading">UI/UX Designing</h3></div>
+        <div class="serviceLine3"><img src="images/AD-line.svg" alt=""><h3 class="adheading">Android Development</h3></div>
+        </div>
+        <div class="serviceSection">
+            <div class="service1 service"><img src="images/fd-svg.svg" alt=""></div>
+            <div class="service2 service"><img src="images/uiux-svg.svg" alt=""></div>
+            <div class="service3 service"><img src="images/ad-svg.svg" alt=""></div>
         </div>
     </div>
     <hr>
