--- a/index.html
+++ b/index.html
@@ -143,17 +143,37 @@
             <h1>Services</h1>
         </div>
         <div class="slines">
-        <div class="serviceLine1"><img src="images/FD-line.svg" alt=""><h3 class="wdheading">Web Development</h3></div>
-        <div class="serviceLine2"><img src="images/UI-line.svg" alt=""><h3 class="uiuxheading">UI/UX Designing</h3></div>
-        <div class="serviceLine3"><img src="images/AD-line.svg" alt=""><h3 class="adheading">Android Development</h3></div>
+            <div class="serviceLine1"><img src="images/FD-line.svg" alt="">
+                <h3 class="wdheading">Web Development</h3>
+            </div>
+            <div class="serviceLine2"><img src="images/UI-line.svg" alt="">
+                <h3 class="uiuxheading">UI/UX Designing</h3>
+            </div>
+            <div class="serviceLine3"><img src="images/AD-line.svg" alt="">
+                <h3 class="adheading">Android Development</h3>
+            </div>
         </div>
         <div class="serviceSection">
             <div class="service1 service"><img src="images/fd-svg.svg" alt=""></div>
             <div class="service2 service"><img src="images/uiux-svg.svg" alt=""></div>
             <div class="service3 service"><img src="images/ad-svg.svg" alt=""></div>
+
+
         </div>
+        <div class="serviceTexts">
+            <div class="text1"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt
+                exercitation ullamco</div>
+            <div class="text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt
+                exercitation ullamco</div>
+            <div class="text3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt
+                exercitation ullamco</div>
+        </div>
+
     </div>
-    <hr>
+    <div class="page4"></div>
 
 
 
