--- a/index.html
+++ b/index.html
@@ -173,7 +173,43 @@
         </div>
 
     </div>
-    <div class="page4"></div>
+    <div class="page4">
+        <div class="contact-title">
+            <img src="images/Contact.svg" alt="">
+        </div>
+        <div class="contact-contents">
+            <div class="Csection1 cs">
+                <div class="address">
+                    <img src="images/Address.svg" alt="">
+                </div>
+                <div class="phone">
+                    <img src="images/phone.svg" alt="">
+                </div>
+                <div class="email"><img src="images/email.svg" alt=""></div>
+            </div>
+            <div class="Csection2 cs">
+                <form action="" class="contactForm">
+                    <h2>Get in touch</h2>
+                    <div class="input1 inputt">
+                        <label for="nameInput"><img src="images/person.svg" alt=""> Full Name</label>
+                        <input type="text" id="nameInput">
+                    </div>
+                    <div class="input2 inputt">
+                        <label for="emailInput"><img src="images/email2.svg" alt="">Email</label>
+                        <input type="text" id="emailInput">
+                    </div>
+                    <div class="input3 inputt">
+                        <label for="messageArea"><img src="images/message-square_svgrepo.com.svg" alt="">Type your message here</label>
+                        <textarea maxlength="400" id="messageArea" cols="10" rows="10" placeholder="Enter message"></textarea>
+                    </div>
+                    <div class="sumbitBtn">
+                        <button>Reset</button>
+                        <button>Send</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>  
 
 
 
