all pages added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <!-- <div id="loader">
+    <div id="loader">
         <div id="wrapperload">
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
             <div class="elem">
@@ -26,7 +26,7 @@
             </div>
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
         </div>
-    </div> -->
+    </div>
     <div id="page1">
 
         <nav>
@@ -199,8 +199,10 @@
                         <input type="text" id="emailInput">
                     </div>
                     <div class="input3 inputt">
-                        <label for="messageArea"><img src="images/message-square_svgrepo.com.svg" alt="">Type your message here</label>
-                        <textarea maxlength="400" id="messageArea" cols="10" rows="10" placeholder="Enter message"></textarea>
+                        <label for="messageArea"><img src="images/message-square_svgrepo.com.svg" alt="">Type your
+                            message here</label>
+                        <textarea maxlength="400" id="messageArea" cols="10" rows="10"
+                            placeholder="Enter message"></textarea>
                     </div>
                     <div class="sumbitBtn">
                         <button>Reset</button>
@@ -209,7 +211,52 @@
                 </form>
             </div>
         </div>
-    </div>  
+    </div>
+    <div class="page5">
+        <div class="about-title"><img src="images/about-title.svg" alt=""></div>
+        <div class="about-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.
+        </div>
+        <div class="skilled">
+            <div class="skils"><img src="images/skills.svg" alt=""></div>
+            <div class="education"><img src="images/education.svg" alt=""></div>
+            <div class="experience"><img src="images/experience.svg" alt=""></div>
+        </div>
+        <footer>
+            <div class="left-footer">
+                <div class="name"><img src="images/name.svg" alt=""></div>
+                <div class="links">
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/phone-icon.svg"
+                            alt="">+91 - 8267925470</a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/email2.svg"
+                            alt="">mohdsaad88842@gmail.com</a>
+                </div>
+            </div>
+            <div class="right-footer">
+                <div class="follow-heading"><img src="images/followon.svg" alt=""></div>
+                <div class="follow-links">
+                    <a href="https://www.instagram.com/saad.salmany/" target="_blank" rel="noopener noreferrer">
+                        <img src="images/instagram-fill 1.svg" alt="">
+
+                    </a>
+                    <a href="https://www.linkedin.com/in/saadsalmany/" target="_blank" rel="noopener noreferrer">
+                        <img src="images/linkedin-box-fill 1.svg" alt="">
+
+                    </a>
+                    <a href="https://www.facebook.com/saadsalmanyyy" target="_blank" rel="noopener noreferrer">
+                        <img id="fb" src="images/facebook.svg" alt="">
+
+                    </a>
+                </div>
+            </div>
+        </footer>
+        <div class="copyright"><img src="images/copyright.svg" alt=""></div>
+    </div>
+
 
 
 
