--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <h2>Get in touch</h2>
                     <div class="input1 inputt">
                         <label for="nameInput"><img src="images/person.svg" alt=""> Full Name</label>
-                        <input type="text" id="nameInput">
+                        <input type="text" id="nameInput" required>
                     </div>
                     <div class="input2 inputt">
                         <label for="emailInput"><img src="images/email2.svg" alt="">Email</label>
