--- a/index.html
+++ b/index.html
@@ -34,11 +34,16 @@
                 <a href="index.html"> <img id="title" src="images/logo-icon.svg" alt="This is an logo"></a>
             </div>
             <div class="links-side">
-                <a href="index.html">Home</a>
-                <a href="#">Projects</a>
-                <a href="#">Services</a>
-                <a href="#">About</a>
-                <button class="contactbtn">Contact</button>
+                <a href="#page1">Home</a>
+                
+                <a href="#page2">Projects</a>
+                <a href="#page3">Services</a>
+                <a href="#page5">About</a>
+                <div class="cbtn">
+                    <a href="#page4">
+                        <button class="contactbtn">Contact</button>
+                    </a>
+                </div>
             </div>
 
         </nav>
@@ -62,7 +67,10 @@
                     <div class="text">Have a project?</div>
 
                     <div class="TalkBtn">
-                        <button>Let's talk</button>
+                        <a href="#page4">
+                            <button>Let's talk</button>
+
+                        </a>
                     </div>
 
                 </div>
@@ -83,7 +91,7 @@
             </div>
         </div>
     </div>
-    <div class="page2">
+    <div class="page2" id="page2">
         <div class="project-title">
             <img src="images/icon-dark.svg" alt="">
             <h1>Projects</h1>
@@ -137,7 +145,7 @@
 
 
     </div>
-    <div class="page3">
+    <div class="page3" id="page3">
         <div class="services-title">
             <img src="images/icon-dark.svg" alt="">
             <h1>Services</h1>
@@ -173,7 +181,7 @@
         </div>
 
     </div>
-    <div class="page4">
+    <div class="page4" id="page4">
         <div class="contact-title">
             <img src="images/Contact.svg" alt="">
         </div>
@@ -212,7 +220,7 @@
             </div>
         </div>
     </div>
-    <div class="page5">
+    <div class="page5" id="page5">
         <div class="about-title"><img src="images/about-title.svg" alt=""></div>
         <div class="about-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
