--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saad Salmany</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
     <link rel="shortcut icon" href="images/Icon (Dark).svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +16,7 @@
 </head>
 
 <body>
-    <div id="loader">
+    <!-- <div id="loader">
         <div id="wrapperload">
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
             <div class="elem">
@@ -26,13 +27,14 @@
             </div>
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
         </div>
-    </div>
+    </div> -->
     <div id="page1">
 
         <nav>
             <div class="logo-side">
                 <a href="index.html"> <img id="title" src="images/logo-icon.svg" alt="This is an logo"></a>
             </div>
+            <div class="menubtn"><img src="images/menu btn.svg" alt=""></div>
             <div class="links-side">
                 <a href="#page1">Home</a>
                 
@@ -49,7 +51,7 @@
         </nav>
         <div class="sections">
             <div class="left">
-                <h4>Hello, I am <img src="images/typelogo.svg" alt=""></h4>
+                <h4>Hello, I am <img id="nameLogo" src="images/typelogo.svg" alt=""></h4>
                 <h5>And I am <span class="autoType">Web developer</span> from <span>India.</span></h5>
                 <div class="socialIcons">
                     <a href="https://www.instagram.com/saad.salmany/" target="_blank">
