--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <!-- <div id="loader">
+    <div id="loader">
         <div id="wrapperload">
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
             <div class="elem">
@@ -28,7 +28,7 @@
             </div>
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
         </div>
-    </div> -->
+    </div>
     <div id="page1">
 
         <nav>
@@ -47,17 +47,6 @@
                     </a>
                 </div>
             </div>
-            <!-- <div class="sidebar">
-                <a href="#page1">Home</a>
-                <a href="#page2">Projects</a>
-                <a href="#page3">Services</a>
-                <a href="#page5">About</a>
-                <div class="cbtn">
-                    <a href="#page4">
-                        <button class="contactbtn">Contact</button>
-                    </a>
-                </div>
-            </div> -->
 
         </nav>
         <div class="sections">
