img problem solved

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div id="loader">
+    <!-- <div id="loader">
         <div id="wrapperload">
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
             <div class="elem">
@@ -28,7 +28,7 @@
             </div>
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
         </div>
-    </div>
+    </div> -->
     <div id="page1">
 
         <nav>
@@ -212,15 +212,9 @@
 
         </div>
         <div class="serviceTexts">
-            <div class="text1"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt
-                exercitation ullamco</div>
-            <div class="text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt
-                exercitation ullamco</div>
-            <div class="text3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt
-                exercitation ullamco</div>
+            <div class="text1">Responsive frontend expert crafting visually appealing web experiences with precision.</div>
+            <div class="text2">Crafting intuitive, visually stunning UI/UX designs with precision and creativity.</div>
+            <div class="text3">Android developer crafting innovative mobile experiences with precision and creative flair.</div>
         </div>
 
     </div>
