--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-    <div id="loader">
+    <!-- <div id="loader">
         <div id="wrapperload">
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
             <div class="elem">
@@ -28,7 +31,7 @@
             </div>
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
         </div>
-    </div>
+    </div> -->
     <div id="page1">
 
         <nav>
@@ -170,17 +173,18 @@
             <div class="serv1"><img src="images/vertical-line.svg" alt=""></div>
             <div class="serv2">
                 <div class="subserv ss1">
-                <img src="images/FD-lineM.svg" alt="">
-                <h1>Fronted Development</h1>
-                <img class="ssimg" src="images/fd-svg.svg" alt="">
-                <p>Responsive frontend expert crafting visually appealing web experiences with precision.<p>
+                    <img src="images/FD-lineM.svg" alt="">
+                    <h1>Fronted Development</h1>
+                    <img class="ssimg" src="images/fd-svg.svg" alt="">
+                    <p>Responsive frontend expert crafting visually appealing web experiences with precision.
+                    <p>
 
                 </div>
                 <div class="subserv ss2">
-                <img src="images/ui-lineM.svg" alt="">
-                <h1>UI/UX Designing</h1>
-                <img src="images/uiux-svg.svg" alt="" class="ssimg2">
-                <p>Crafting intuitive, visually stunning UI/UX designs with precision and creativity.</p>
+                    <img src="images/ui-lineM.svg" alt="">
+                    <h1>UI/UX Designing</h1>
+                    <img src="images/uiux-svg.svg" alt="" class="ssimg2">
+                    <p>Crafting intuitive, visually stunning UI/UX designs with precision and creativity.</p>
 
 
                 </div>
@@ -212,9 +216,11 @@
 
         </div>
         <div class="serviceTexts">
-            <div class="text1">Responsive frontend expert crafting visually appealing web experiences with precision.</div>
+            <div class="text1">Responsive frontend expert crafting visually appealing web experiences with precision.
+            </div>
             <div class="text2">Crafting intuitive, visually stunning UI/UX designs with precision and creativity.</div>
-            <div class="text3">Android developer crafting innovative mobile experiences with precision and creative flair.</div>
+            <div class="text3">Android developer crafting innovative mobile experiences with precision and creative
+                flair.</div>
         </div>
 
     </div>
@@ -260,16 +266,59 @@
     <div class="page5" id="page5">
         <div class="about-title"><img src="images/about-title.svg" alt=""></div>
         <div class="about-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
+            Hi, I'm Saad Salmany, a dynamic developer with 1 year of experience in crafting robust software solutions.
+            Specializing in Web Development, my expertise spans JavaScript, React, Android Studio, Node.js, HTML, and
+            CSS.
+            <br>
+
+            During my academic journey, I've contributed to impactful projects, showcasing my commitment to excellence.
+            <br>
+
+            Beyond coding, I find joy in PC gaming, music, and exploring new places. I passionately believe in
+            technology's power to bring positive change, always seeking innovative solutions to complex problems.
+            <br>
+
+            Let's connect! Feel free to reach out via the contact section or through the links on my website.
+
+
+
         </div>
         <div class="skilled">
-            <div class="skils"><img src="images/skills.svg" alt=""></div>
-            <div class="education"><img src="images/education.svg" alt=""></div>
-            <div class="experience"><img src="images/experience.svg" alt=""></div>
+            <div class="skills"><img src="images/skills.svg" alt="">
+                <ul>
+                    <li>
+                        Fronted - HTML, CSS, Javascript & React
+                    </li>
+                    <li>
+                        Backend - Express js, node js
+                    </li>
+                    <li>
+                        UI/UX Designing using Figma
+                    </li>
+                    <li>
+                        Android Development
+                    </li>
+                </ul>
+
+
+            </div>
+            <div class="education"><img src="images/education.svg" alt="">
+                <ul>
+                    <li>
+                        Bachelors of Computer Application (BCA)
+                    </li>
+
+                </ul>
+            </div>
+            <div class="experience"><img src="images/experience.svg" alt="">
+                <ul>
+                    <li>
+                        1+ year experience in Web development
+                    </li>
+
+                </ul>
+
+            </div>
         </div>
         <footer>
             <div class="left-footer">
@@ -277,8 +326,7 @@
                 <div class="links">
                     <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/phone-icon.svg"
                             alt="">+91 - 8267925470</a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/email2.svg"
-                            alt="">mohdsaad88842@gmail.com</a>
+                    <a href="mailto:mohdsaad88842@gmail.com">mohdsaad88842@gmail.com</a>
                 </div>
             </div>
             <div class="right-footer">
