--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
         </div>
     </div> -->
+    
     <div id="page1">
 
         <nav>
@@ -324,11 +325,12 @@
             <div class="left-footer">
                 <div class="name"><img src="images/name.svg" alt=""></div>
                 <div class="links">
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/phone-icon.svg"
+                    <a href="https://wa.me/8267925470" target="_blank" rel="noopener noreferrer"><img src="images/whatsapp-svg.svg"
                             alt="">+91 - 8267925470</a>
-                    <a href="mailto:mohdsaad88842@gmail.com">mohdsaad88842@gmail.com</a>
+                            
+                    <a href="mailto:mohdsaad88842@gmail.com"><img src="images/email2.svg" alt="">mohdsaad88842@gmail.com</a>
                 </div>
-            </div>
+            </div>;
             <div class="right-footer">
                 <div class="follow-heading"><img src="images/followon.svg" alt=""></div>
                 <div class="follow-links">
@@ -340,8 +342,8 @@
                         <img src="images/linkedin-box-fill 1.svg" alt="">
 
                     </a>
-                    <a href="https://www.facebook.com/saadsalmanyyy" target="_blank" rel="noopener noreferrer">
-                        <img id="fb" src="images/facebook.svg" alt="">
+                    <a class="fblink" href="https://www.facebook.com/saadsalmanyyy" target="_blank" rel="noopener noreferrer">
+                        <img class="fb" src="images/facebook.svg" alt="">
 
                     </a>
                 </div>
