--- a/index.html
+++ b/index.html
@@ -39,8 +39,20 @@
             <div class="logo-side">
                 <a href="index.html"> <img id="title" src="images/logo-icon.svg" alt="This is an logo"></a>
             </div>
-            <div class="menubtn"><img src="images/menu btn.svg" alt=""></div>
+            <div class="menubtn" onclick="showsidebar()" ><img src="images/menu btn.svg" alt=""></div>
             <div class="links-side">
+                <a href="#page1">Home</a>
+                <a href="#page2">Projects</a>
+                <a href="#page3">Services</a>
+                <a href="#page5">About</a>
+                <div class="cbtn">
+                    <a href="#page4">
+                        <button class="contactbtn">Contact</button>
+                    </a>
+                </div>
+            </div>
+            <div class="Mobile-links-side">
+                <img onclick="hidesidebar()" id="mobile-close-menu" src="images/close-menu.svg" alt="">
                 <a href="#page1">Home</a>
                 <a href="#page2">Projects</a>
                 <a href="#page3">Services</a>
