--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <!-- <div id="loader">
+    <div id="loader">
         <div id="wrapperload">
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
             <div class="elem">
@@ -31,7 +31,7 @@
             </div>
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
         </div>
-    </div> -->
+    </div>
     
     <div id="page1">
 
@@ -127,8 +127,8 @@
                             JavaScript.
                         </div>
                         <div class="pbtn">
-                            <div class="div1">UI/UX</div>
-                            <div class="div2"><a href="https://saadsalmany.github.io/Portfolio-project/" target="_blank"
+                            <div class="div1">Website</div>
+                            <div class="div2"><a href="https://github.com/saadsalmany/Portfolio-project" target="_blank"
                                     rel="noopener noreferrer"><img src="images/github-fill 1.svg" alt="">GitHub</a>
                             </div>
                         </div>
@@ -300,7 +300,7 @@
             <div class="skills"><img src="images/skills.svg" alt="">
                 <ul>
                     <li>
-                        Fronted - HTML, CSS, Javascript & React
+                        Fronted - HTML, CSS, Javascript
                     </li>
                     <li>
                         Backend - Express js, node js
