addes twitter icon in footer

--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@
                         <img src="images/linkedin-box-fill 1.svg" alt="">
 
                     </a>
-                    <a class="fblink" href="https://www.facebook.com/saadsalmanyyy" target="_blank"
+                    <a class="fblink" href="https://twitter.com/saadsalmanyy" target="_blank"
                         rel="noopener noreferrer">
-                        <img class="fb" src="images/facebook.svg" alt="">
+                        <img class="fb" src="images/twitter.svg" alt="">
 
                     </a>
                 </div>
