--- a/index.html
+++ b/index.html
@@ -307,11 +307,11 @@
             <div class="skills"><img src="images/skills.svg" alt="">
                 <ul>
                     <li>
+                        Cyber Security Analyst
+                    </li>
+                    <li>
                         Fronted - HTML, CSS, Javascript
                     </li>
-                    <!-- <li>
-                        Backend - Express js, node js
-                    </li> -->
                     <li>
                         UI/UX Designing using Figma
                     </li>
@@ -333,7 +333,7 @@
             <div class="experience"><img src="images/experience.svg" alt="">
                 <ul>
                     <li>
-                        1+ year experience in Web development
+                        0.4 year experience in Web development
                     </li>
 
                 </ul>
