--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="btn">
-                    <div class="text">Have a project?</div>
+                    <div class="text">Have a query?</div>
 
                     <div class="TalkBtn">
                         <a href="#page4">
@@ -325,7 +325,7 @@
             <div class="education"><img src="images/education.svg" alt="">
                 <ul>
                     <li>
-                        Bachelors of Computer Application (BCA)
+                        BCA (undergraduate)
                     </li>
 
                 </ul>
@@ -333,7 +333,7 @@
             <div class="experience"><img src="images/experience.svg" alt="">
                 <ul>
                     <li>
-                        0.4 year experience in Web development
+                        0 year experience in Web development
                     </li>
 
                 </ul>
