--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div id="wrapperload">
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
             <div class="elem">
-                <h3>Software developer</h3>
+                <h3>BCA Student</h3>
             </div>
             <div class="elem">
-                <h3>Loves to help brands.</h3>
+                <h3>Learning IT skills.</h3>
             </div>
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
         </div>
