--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="71jOq98pMUJueIuMyD-kpM895wAVgriq2C0NXPEz-no" />
     <title>Saad Salmany</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile.css">
