updated copyright, added precise smooth scrolling.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <div id="loader">
+    <!-- <div id="loader">
         <div id="wrapperload">
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
             <div class="elem">
@@ -32,7 +32,7 @@
             </div>
             <div class="elem"><img src="images/typelogo.svg" alt=""></div>
         </div>
-    </div>
+    </div> -->
 
     <div id="page1">
 
@@ -287,7 +287,7 @@
     <div class="page5" id="page5">
         <div class="about-title"><img src="images/about-title.svg" alt=""></div>
         <div class="about-text">
-            Hi, I'm Saad Salmany, a dynamic developer with 1 year of experience in crafting robust software solutions.
+            Hi, I'm Saad Salmany, a dynamic developer with 0 year of experience in crafting robust software solutions.
             Specializing in Web Development, my expertise spans JavaScript, React, Android Studio, Node.js, HTML, and
             CSS.
             <br>
@@ -307,15 +307,17 @@
         <div class="skilled">
             <div class="skills"><img src="images/skills.svg" alt="">
                 <ul>
-                    <li>
+                    <!-- <li>
                         Cyber Security Analyst
-                    </li>
+                    </li> -->
                     <li>
-                        Fronted - HTML, CSS, Javascript
+                        Fronted - HTML, CSS & Javascript
                     </li>
                     <li>
                         UI/UX Designing using Figma
                     </li>
+                    <li>Github</li>
+                    <li>Figma</li>
                     <!-- <li>
                         Android Development
                     </li> -->
@@ -371,7 +373,11 @@
                 </div>
             </div>
         </footer>
-        <div class="copyright"><img src="images/copyright.svg" alt=""></div>
+        <div class="copyright">
+            <!-- <img src="images/copyright.svg" alt=""> -->
+            Copyright © 2024 - All rights reserved
+            
+        </div>
     </div>
 
 
