--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <div class="page3" id="page3">
         <div class="services-title">
             <img src="images/icon-dark.svg" alt="">
-            <h1>Services</h1>
+            <h1>Learning</h1>
         </div>
         <div class="serviceContainer">
             <div class="serv1"><img src="images/vertical-line.svg" alt=""></div>
